Fix players on mobile resolution

--- a/less/player.less
+++ b/less/player.less
@@ -42,8 +42,6 @@
 
 .follow-button-spotify {
 	margin-top: 20px;
-	margin-left: 70px;
-
 }
 
 @media (max-width: 768px) {
